# FlashVideo

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  README.md  SECURITY.md  pyproject.toml  setup_env.sh
.github/workflows/: ci.yml
configs/: flashvideo_action_recognition.yaml  flashvideo_generation.yaml  flashvideo_understanding.yaml  flashvideo_world_model.yaml
docker/: Dockerfile  docker-compose.yml
docs/: Action-Recognition.md  FAQ.md  Home.md  Installation.md  Quick-Start.md  Video-Generation.md  Video-Understanding.md  World-Models.md
examples/: action_recognition.py  benchmark_video.py  text_to_video.py  video_understanding.py  world_model.py
flashvideo/: __init__.py  cli.py  registry.py
flashvideo/analytics/: __init__.py  benchmark.py  metrics.py
flashvideo/cfg/: __init__.py  config.py
flashvideo/engine/: __init__.py  exporter.py  predictor.py  trainer.py  validator.py
flashvideo/generation/: __init__.py  frame_interpolation.py  img_to_video.py  schedulers.py  text_to_video.py  video_editing.py  video_sr.py
flashvideo/models/: __init__.py  flashvideo_model.py  lora.py
flashvideo/models/architectures/: __init__.py  cogvideox.py  slowfast.py  timesformer.py  video_dit.py  video_mae.py  video_vit.py  world_model.py
flashvideo/solutions/: __init__.py  action_classifier.py  scene_simulator.py  video_generator.py
flashvideo/understanding/: __init__.py  captioning.py  classification.py  grounding.py  temporal.py
flashvideo/utils/: __init__.py  callbacks.py  io.py  visualize.py
flashvideo/world_models/: __init__.py  action_conditioned.py  dynamics.py  memory.py  simulator.py
tests/: test_comprehensive.py  test_generation.py  test_models.py  test_new_models.py  test_registry.py
